<resources>
    <string name="app_name">VDongThinker</string>
    <string name="lable_index">首页</string>
    <string name="lable_course">课程</string>
    <string name="lable_organization">机构</string>
    <string name="lable_community">社区</string>
    <string name="lable_mall">商城</string>
    <string name="lable_code">验证码登录</string>
    <string name="lable_password">密码登录</string>
    <string name="lable_name">昵称</string>
    <string name="lable_sex">性别</string>
    <string name="lable_birth">生日</string>
    <string name="lable_tel">联系电话</string>
    <string name="lable_address">现居住地</string>
    <string name="lable_hot_course">热门课程</string>
    <string name="lable_agency">推荐机构</string>
    <string name="lable_hot_mall">热卖产品</string>
    <string name="lable_course_name">课程名称</string>
    <string name="lable_course_info">课程简介</string>
    <string name="lable_course_object">授课对象</string>
    <string name="lable_course_set">课程设置</string>
    <string name="lable_course_remark">备注</string>
    <string name="lable_course_address">上课地址</string>
    <string name="lable_course_agency">授课机构</string>
    <string name="lable_course_photo">精彩瞬间</string>
    <string name="lable_course_assess">学生评价（0）</string>
    <string name="lable_all_assess">全部评价</string>
    <string name="lable_agency_info">机构简介</string>
    <string name="lable_agency_address">机构地址</string>
    <string name="lable_agency_photo">机构风采</string>
    <string name="lable_agency_assess">学生评价</string>
    <string name="lable_mall_detail">产品详情</string>
    <string name="lable_shipping_type">配送方式</string>
    <string name="lable_student_info">学生基本信息</string>
    <string name="lable_name1">姓名</string>
    <string name="lable_phone">手机号</string>
    <string name="lable_address1">所在地区</string>
    <string name="lable_address2">详细地址</string>
    <string name="lable_course_time">开课时间</string>
    <string name="lable_my_course">我的培训</string>
    <string name="lable_student">学生信息</string>
    <string name="lable_yijian">意见反馈</string>
    <string name="lable_set">设置</string>
    <string name="lable_account_safe">账户安全</string>
    <string name="lable_version">检查更新</string>
    <string name="lable_about_us">关于我们</string>
    <string name="lable_zan">点赞</string>
    <string name="lable_assess">评论</string>
    <string name="lable_replay">课程回复</string>
    <string name="lable_set_password">设置密码</string>
    <string name="lable_update_tel">更改手机号</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_find_password">找回密码</string>
    <string name="title_set_password">设置密码</string>
    <string name="title_update_tel">更改手机号</string>
    <string name="title_perfect_information">完善信息</string>
    <string name="title_mall">宝贝</string>
    <string name="title_mall_detail">详情</string>
    <string name="title_mall_assess">评价</string>
    <string name="title_assess_detail">评论详情</string>
    <string name="text_phone">手机号</string>
    <string name="text_code">验证码</string>
    <string name="text_passwprd">密码</string>
    <string name="text_getcode">获取验证码</string>
    <string name="text_phone_code">手机号验证</string>
    <string name="text_set_password">设置新密码</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_register_agreement1">注册代表同意</string>
    <string name="text_register_agreement2">《汇商联盟用户服务协议》</string>
    <string name="text_add_touxiang">添加头像</string>
    <string name="text_update_tel">更换手机号后，原手机号不可用于登录</string>
    <string name="toast_network_error">网络错误</string>
    <string name="toast_search_no">搜索话题不存在...</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_password">请输入6~16位新密码</string>
    <string name="hint_password_agin">再次输入新密码</string>
    <string name="hint_name">输入昵称</string>
    <string name="hint_tel">输入手机号</string>
    <string name="hint_address">现居住地地址</string>
    <string name="hint_add_address">请添加收货地址</string>
    <string name="btn_wancheng">完成</string>
    <string name="btn_set">确认设置</string>
    <string name="btn_next">下一步</string>
    <string name="btn_more">查看更多</string>
    <string name="btn_buy_course">购买课程</string>
    <string name="btn_add_car">加入购物车</string>
    <string name="btn_buy">&#8194;立即购买&#8194;</string>
    <string name="btn_preservation">保存</string>

    <string name="text_test_long">测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本测试长文本</string>
</resources>
