<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <include layout="@layout/layout_title"/>
    <RelativeLayout
        android:id="@+id/rl_touxiang"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/iv_touxiang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/img_defult_icon"/>
        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/icon_add"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_add_touxiang"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/btn_gray2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/line4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_name"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:hint="@string/hint_name"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="right"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line3"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_sex"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"/>
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right">
                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男"
                        android:button="@null"
                        android:background="@null"
                        android:drawableLeft="@drawable/radio_sex"
                        android:drawablePadding="5dp"
                        android:checked="true"
                        android:layout_marginRight="30dp"/>
                    <RadioButton
                        android:id="@+id/rb_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女"
                        android:button="@null"
                        android:background="@null"
                        android:drawableLeft="@drawable/radio_sex"
                        android:drawablePadding="5dp"/>
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line3"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_birth"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:background="@null"
                    android:textColor="@color/text_black"
                    android:text="1990-01-01"
                    android:gravity="right"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line3"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_tel"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_tel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:hint="@string/hint_tel"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="right"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line3"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_address"
                    android:textSize="16sp"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:hint="@string/hint_address"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:gravity="right"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line3"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            style="@style/btnDefult"
            android:text="@string/btn_wancheng"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_corners_gray"/>
    </LinearLayout>
</LinearLayout>