<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@mipmap/icon_phone" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:hint="@string/text_phone"
                android:background="@null"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line3"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@mipmap/icon_code" />
            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:hint="@string/text_code"
                android:background="@null"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_getcode"
                android:textSize="13sp"
                android:textColor="@color/text_blue1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line3"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</LinearLayout>